--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.15.0",
     "axios": "^1.6.7",
+    "chart.js": "^3.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "gsap": "^3.12.5",
