--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,45 +4,26 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.3.1",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@reduxjs/toolkit": "^2.2.1",
-    "antd": "^5.15.0",
-    "axios": "^1.6.7",
-    "chart.js": "^3.7.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "gsap": "^3.12.5",
-    "lucide-react": "^0.344.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.2",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "postcss-nested": "^6.0.1",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
   }
 }
