--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.17.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
